12/20/11 add shaker with dynamic label
12/20/11 workaround for #3190 (combo box popup causes control panel to resize)
12/20/11 add "solute form" to model and control panel
12/20/11 grab solute control from dilutions
12/20/11 specify solutes as in design document
12/20/11 added string resources for 1st tab
12/20/11 added more basic infrastructure
12/20/11 grabbed relevant model code from dilutions
12/19/11 grabbed shaker image from sugar-and-salt-solutions
12/7/11 created project skeleton