@@ -6,6 +6,7 @@ import java.awt.Frame;
 
 import edu.colorado.phet.beerslawlab.control.SoluteControlNode;
 import edu.colorado.phet.beerslawlab.view.BLLCanvas;
+import edu.colorado.phet.beerslawlab.view.DropperNode;
 import edu.colorado.phet.beerslawlab.view.ShakerNode;
 import edu.colorado.phet.common.piccolophet.nodes.ResetAllButtonNode;
 
@@ -22,6 +23,8 @@ public class ConcentrationCanvas extends BLLCanvas {
         SoluteControlNode soluteControlNode = new SoluteControlNode( model.getSolutes(), model.solution.solute, model.soluteForm );
         // Shaker
         ShakerNode shakerNode = new ShakerNode( model.solution.solute, model.soluteForm );
+        // Dropper
+        DropperNode dropperNode = new DropperNode( model.solution.solute, model.soluteForm );
         // Reset All button
         ResetAllButtonNode resetAllButtonNode = new ResetAllButtonNode( model, parentFrame, 18, Color.BLACK, Color.ORANGE ) {{
             setConfirmationEnabled( false );
@@ -30,6 +33,7 @@ public class ConcentrationCanvas extends BLLCanvas {
         // rendering order
         {
             addChild( shakerNode );
+            addChild( dropperNode );
             addChild( resetAllButtonNode );
             addChild( soluteControlNode ); // on top, because it has a combo box popup
         }
@@ -42,6 +46,8 @@ public class ConcentrationCanvas extends BLLCanvas {
             soluteControlNode.setOffset( getStageSize().getWidth() - soluteControlNode.getFullBoundsReference().getWidth() - xMargin, yMargin );
             // upper center
             shakerNode.setOffset( soluteControlNode.getFullBoundsReference().getMinX() - shakerNode.getFullBoundsReference().getWidth() - 40, yMargin );
+            // upper center
+            dropperNode.setOffset( soluteControlNode.getFullBoundsReference().getMinX() - dropperNode.getFullBoundsReference().getWidth() - 40, yMargin );
             // lower right
             resetAllButtonNode.setOffset( getStageSize().getWidth() - resetAllButtonNode.getFullBoundsReference().getWidth() - xMargin,
                                           getStageSize().getHeight() - resetAllButtonNode.getFullBoundsReference().getHeight() - yMargin );
