@@ -1,3 +1,4 @@
+12/20/11 add dropper with dynamic label (no button yet)
 12/20/11 add shaker with dynamic label
 12/20/11 workaround for #3190 (combo box popup causes control panel to resize)
 12/20/11 add "solute form" to model and control panel
